fix: colors being too dark remove: signup (since its an organization)

--- a/dashboard/src/main.css
+++ b/dashboard/src/main.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 @theme {
     --color-background: #030712;
-    --color-foreground: #171c29;
-    --color-secondary: #212736;
+    --color-foreground: #202636;
+    --color-secondary: #293040;
     --color-highlight: #00bcff;
     --color-text-primary: #dde2ea;
     --color-text-secondary: #c5c9d1;
@@ -19,9 +19,15 @@
         color: var(--color-text-primary);
     }
 
-    a:visited { color: rgb(68, 130, 201); }
-    
-    a:hover { color: rgb(68, 130, 201); }
-    
-    a:link { color: rgb(68, 130, 201); }
+    a:visited {
+        color: rgb(68, 130, 201);
+    }
+
+    a:hover {
+        color: rgb(68, 130, 201);
+    }
+
+    a:link {
+        color: rgb(68, 130, 201);
+    }
 }
